# chattingAI

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yml
chat-server/: Cargo.toml
chat-server/src/: main.rs  ollama.rs  state.rs
chat-server/src/routes/: chat.rs  health.rs  mod.rs  model.rs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: client.js
src/assets/styles/: main.css
src/assets/styles/themes/: dark.css  light.css
src/components/: BottomBar.vue  ChatWindow.vue  CodeBlock.vue  MessageBubble.vue  ModelSelector.vue  ThinkingBlock.vue
src/stores/: chat.js  model.js
