[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (ollama 호출용)
reqwest = { version = "0.13", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async stream (SSE)
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
