[package]
name = "gemma4-chat"
version = "0.1.0"
description = "AI Chat — Local AI Chat App"
authors = []
license = ""
repository = ""
default-run = "gemma4-chat"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gemma4_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gemma4-chat"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
strip = true
lto = true
